tests/.nts/error/links_pin_not_assignable1.nts
.chipsets:
input  in
output out

.links:
in:944162 out:1